@@ -41,6 +41,8 @@ Version 0.6
 - added :meth:`werkzeug.MIMEAccept.best_match`
 - multi-value test-client posts from a standard dictionary are now
   supported.  Previously you had to use a multi dict.
+- rule templates properly work with submounts, subdomains and
+  other rule factories now.
 
 Version 0.5.1
 -------------
